fix: delete new folder,archive,fond from cipher keys
